--- a/Gallery.css
+++ b/Gallery.css
@@ -1,19 +1,33 @@
-.centered-carousel {
-    padding-top: 2em;
-    padding-bottom: 2em;
-    max-width: 100%;
-    margin: 0 auto;
-  }
 
-  .centered-carousel .carousel-inner .carousel-item img {
-    width: 100%;
-    height: 700px; /* Adjust the height to your preferred size */
-    object-fit: cover; /* Maintain image aspect ratio */
-    box-shadow: 500px 5px 15px rgba(0, 0, 0, 0.897); /* Customize the shadow as needed */
-  }
+.film {
+  position: sticky;
+  padding-top: 6%;
+  display: flex; /* Use flexbox for horizontal alignment */
+  align-items: center; /* Center images vertically */
+  width: 100%; /* Adjust the container width as needed */
+  overflow: hidden;
+}
+
+.film img {
+  max-width: 30%; /* Set the maximum width of each image */
+  height: auto; /* Maintain the aspect ratio */
+  margin-left: -4px;
+}
+
+.centered-carousel {
+  padding-top: 2em;
+  padding-bottom: 2em;
+  max-width: 50%;
+  margin: 0 auto;
+}
+
+.centered-carousel .carousel-inner {
+  border-radius: 15px;
+  box-shadow: 0 0 0 7px black, 0 0 0 12px white, 0 0 0 13px black, 0 0 0 20px white, 0 0 0 27px black;
+}
   
   .Gallery {
-    padding-top: 12em;
+    padding-top: 1em;
     text-align: center;
   }
 
