Few changes to styling

--- a/stylelineup.css
+++ b/stylelineup.css
@@ -15,6 +15,21 @@ body {
     background-attachment: fixed;
 }
 
+.header-font {
+    color: white;
+    text-align: center;
+    font-family: "Bungee Shade";
+    font-size: 30px;
+  }
+
+  p {
+    font-size: 20px;
+    font-family: "Audiowide", cursive;
+  }
+
+  h4 {
+    font-family: "Audiowide", cursive;
+  }
 /* Footer */
 footer {
     width: 100%;
